2003-08-013	sgehrman & ujwal

    * Moved config panel sheet and code into separate nib file and controller.

2003-08-011	sgehrman

    * fixed a bug when setting tabs to the right or left.
    * made iTermApplicationDelegate to further separate that code from the iTermController
    * added [iTermController sharedInstance] to make it simple to use one instance of this
    * added some missing [super dealloc] calls
    * cleaned up some formatting
    * cleaned up addressbookcontroller


2003-08-09	ujwal

    * Fixed resizing when terminal view is not in an iTerm window.

2003-08-08	ujwal

    * Fixed a bug that caused sessions launched from applescript in a 
      new window not honor the row, column, and font settings.
      
    * Created [PseudoTerminal initViewWithFrame] that creates a terminal view that should 
      be embeddable in a non-iTerm window. Refactored window initialization 
      code in the process so that an iTerm window does not have to be created 
      before a terminal view can be created.

    * Moved all the header files into Headers/iTerm. Easier to build a framework.
    
    * Made images loadable from bundle.

2003-08-06	ujwal
    
    * Removed all references to [NSApp delegate].
    
    * Renamed MainMenu class to iTermController.

2003-08-03	ujwal

    * Using an autorelease pool in screen update thread.


2003-08-01	ujwal

    * Added Michael Johnston's patch to access text storage of session via 
      Applescript.

2003-07-21	fabian
    * Fixed a bug that messes up deadkey input with alternative OPTION key options.
    
2003-07-21	ujwal

    * Checked in new icons and images.

2003-07-20	ujwal

    * Put back in bold face support for fonts that support it.

2003-07-18	ujwal

    * Re-implemented eraseInDisplay code to save screen contents to scrollback buffer. 
      Fixed a bug in VT100Typesetter in the process.
      
    * During scrollUp, lines at the top are moved into the scrollback buffer.

2003-07-17	ujwal
